Corrected paths in index and removed docs folder

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ canvas {
         </script>
 
         <div id="game">
-            <img id="baddistricts" width="0" height="0" src="../res/baddistricts.png">
+            <img id="baddistricts" width="0" height="0" src="./res/baddistricts.png">
 
             <canvas width="512" height="512" id="gameCanvas">Canvas tag not supported</canvas>
 
