Opening stage works on onMouseMove now too

--- a/index.html
+++ b/index.html
@@ -409,6 +409,9 @@ canvas {
 
                 function onMouseDown(event){
                     click = true;
+                    
+                    mousePoint = getMousePos(canvas, event);
+                    mousePointWorld = camera.transformPoint(mousePoint);
 
                     for (var i = 0; i < mouseListeners.length; i++) {
                         mouseListeners[i].onMouseDown(event);
