Buttons click on onMouseUp

--- a/index.html
+++ b/index.html
@@ -295,13 +295,13 @@ canvas {
 
                 var choiceStageIndex = stages.indexOf(boards[3]);
                 stages.splice(choiceStageIndex, 0, choiceStage);
-                stages.push(choiceStage);
+                //stages.push(choiceStage);
                 /*
                 for (var i = 0; i < boards.length; i++) {
                     if (stages.indexOf(boards[i]) > choiceStageIndex) stages.push(boards[i]);
                 }
                 */
-                stages.push(boards[boards.length-1]);
+                //stages.push(boards[boards.length-1]);
                 stages.push(endStage);
 
                 var time = 0;
