--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@ canvas {
         <script language="javascript" src="./js/scoreboard.js" type="text/javascript"></script>
         <script language="javascript" src="./js/balance.js" type="text/javascript"></script>
         <script language="javascript" src="./js/stage.js" type="text/javascript"></script>
+
+        <link rel="icon" type="image/png" href="https://polytrope.com/favicon.png"/>
     </head>
     <body>
         <div id="nav-container"></div>
         <script type="text/javascript">
         $(document).ready(function() {
-        $('#nav-container').load('https://sigmaepsilonchi.github.io/nav.html');
+        $('#nav-container').load('https://polytrope.com/nav.html');
         });
         </script>
 
@@ -85,30 +87,24 @@ canvas {
 
                 var colors = {
                     teamNeutral: '#808080',
-                    groupNeutral: 'rgba(128, 128, 128, 0.5)',
+                    groupNeutral: 'rgb(192, 192, 192)',
 
                     teams: [
-                        '#CC2929',
-                        '#2929CC',
-                        '#0CA8A4',
+                        'rgb(208, 32, 32)',
+                        'rgb(32, 32, 208)',
+                        'rgb(32, 208, 32)',
                     ],
 
                     teamsLight: [
-                        '#E62E2E',
-                        '#2E2EE6',
-                        '#0CA8A4',
+                        'rgb(224, 128, 128)',
+                        'rgb(128, 128, 224)',
+                        'rgb(128, 224, 128)',
                     ],
 
                     teamsDark: [
-                        '#B32424',
-                        '#2424B3',
-                        '#0CA8A4',
-                    ],
-
-                    groups: [
-                        'rgba(224, 32, 32, 0.5)',
-                        'rgba(32, 32, 224, 0.5)',
-                        'rgba(32, 224, 32, 0.5)',
+                        'rgb(192, 16, 16)',
+                        'rgb(16, 16, 192)',
+                        'rgb(16, 192, 16)',
                     ],
 
                     post: {
