--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
         <div class="game">
-            <h2>District</h2>
+            <h3>DISTRICT</h3>
 
             <div id="district"></div>
         </div>
