--- a/game.html
+++ b/game.html
@@ -22,6 +22,7 @@ canvas {
     <html>
     <head>
         <title>District</title>
+        <script language="javascript" src="./js/mover.js" type="text/javascript"></script>
         <script language="javascript" src="./js/view.js" type="text/javascript"></script>
         <script language="javascript" src="./js/port.js" type="text/javascript"></script>
         <script language="javascript" src="./js/menu.js" type="text/javascript"></script>
@@ -608,6 +609,7 @@ canvas {
             }
 
             function tickProgress(flag, progress, duration){
+                if (progress == flag?1:0) return progress;
                 if (flag) progress += deltaTime/duration;
                 else progress -= deltaTime/duration;
                 return clamp01(progress);
