--- a/game.html
+++ b/game.html
@@ -34,7 +34,6 @@ canvas {
         <script language="javascript" src="./js/stage.js" type="text/javascript"></script>
         <script language="javascript" src="./js/camera.js" type="text/javascript"></script>
         <script language="javascript" src="./js/button.js" type="text/javascript"></script>
-        <script language="javascript" src="./js/counter.js" type="text/javascript"></script>
         <script language="javascript" src="./js/balance.js" type="text/javascript"></script>
 
         <link rel="icon" type="image/png" href="/favicon.png"/>
@@ -82,19 +81,22 @@ canvas {
                 teams: [
                     'rgb(208, 32, 32)',
                     'rgb(32, 32, 208)',
-                    'rgb(32, 208, 32)',
+                    'rgb(128, 128, 128)',
+                    'rgb(16, 16, 16)',
                 ],
 
                 teamsLight: [
                     'rgb(224, 128, 128)',
                     'rgb(128, 128, 224)',
-                    'rgb(128, 224, 128)',
+                    'rgb(192, 192, 192)',
+                    'rgb(32, 32, 32)',
                 ],
 
                 teamsDark: [
                     'rgb(192, 16, 16)',
                     'rgb(16, 16, 192)',
-                    'rgb(16, 192, 16)',
+                    'rgb(64, 64, 64)',
+                    'rgb(0, 0, 0)',
                 ],
 
                 post: {
@@ -160,6 +162,17 @@ canvas {
                     ],
                 },
                 {
+                    repCount: 2,
+                    groupCount: 3,
+                    showReset: false,
+                    layout: [
+                        [0, 0, 0],
+                        [0, 1, 0],
+                        [1, 1, 1],
+                    ],
+                },
+                /*
+                {
                     groupCount: 3,
                     showReset: false,
                     layout: [
@@ -168,6 +181,7 @@ canvas {
                         [1, 1],
                     ],
                 },
+                */
                 {
                     goalScore: 1,
                     secondScore: 1,
@@ -219,6 +233,7 @@ canvas {
                         [1, 1, 0, 0, 1, 1],
                     ],
                 },
+                /*
                 {
                     goalScore: 2,
                     secondScore: 4,
@@ -232,6 +247,7 @@ canvas {
                         [0, 0, 0, 0, 0, 0],
                     ],
                 },
+                */
             ];
 
             var puzzlePositions = [
@@ -259,7 +275,7 @@ canvas {
                 puzzles[i].position = puzzlePositions[i];
             }
 
-            var sandboxStage = new SandboxStage();
+            //var sandboxStage = new SandboxStage();
             var openingStage = new OpeningStage();
             var choiceStage = new ChoiceStage();
             var endStage = new EndStage();
@@ -267,14 +283,14 @@ canvas {
             stages.push(openingStage);
 
             for (var i = 0; i < puzzles.length; i++) {
-                boards.push(new Board(puzzles[i]))
+                boards.push(Board(puzzles[i]));
                 stages.push(boards[i]);
             }
 
             var choiceStageIndex = stages.indexOf(boards[3]);
             stages.splice(choiceStageIndex, 0, choiceStage);
             stages.push(endStage);
-            stages.push(sandboxStage);
+            //stages.push(sandboxStage);
 
             var time = 0;
             var deltaTime;
@@ -285,10 +301,10 @@ canvas {
             var click = false;
             var dirty = false;
 
-            var camera = new Camera();
-            var view = new View();
-            var menu = new Menu();
-            var port = new Port();
+            var view = View();
+            var menu = Menu();
+            var port = Port();
+            var camera = Camera();
 
             function start() {
                 var FPS = 60;
@@ -508,7 +524,7 @@ canvas {
                 if (pawns.length != xCount*yCount) return null;
                 pawns = parseQueryLayout(xCount, yCount, pawns);
 
-                return new Board({
+                return Board({
                     groupCount: groups,
                     goalScore: score,
                     goalTeam: team,
@@ -638,6 +654,11 @@ canvas {
 
             function manhattan(a, b){
                 return Math.abs(a.x-b.x)+Math.abs(a.y-b.y);
+            }
+
+            function distribute(index, total, gap){
+                if (total == 1) return 0;
+                return (index)/(total-1)+gap*index;
             }
 
             start();
