--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             if (query == undefined) query = "";
             else query = "?"+query;
 
-            var embedURL = "./game.html"+query;
+            var embedURL = "./embed.html"+query;
             game.innerHTML = "<embed src=\""+embedURL+"\" width=\"768px\" height=\"768px\" style=\"border:1px solid black\"></embed>"
         </script>
 
