Added main css back to header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <script src="http://code.jquery.com/jquery.min.js"></script>
 
         <link rel="icon" type="image/png" href="/favicon.png"/>
+        <link rel="stylesheet" href="/css/main.css">
         <link rel="stylesheet" href="./css/district.css">
     </head>
     <body>
@@ -124,7 +125,7 @@
                 }
             }
 
-            //advance();
+            advance();
         </script>
 
         <div id="footer-container"></div>
